Добавит модальное окно

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </header>
 
   <main class="main">
+
     <section class="search">
       <div class="container">
         <h1 class="search-title">The Movie Database.</h1>
@@ -62,7 +63,8 @@
       <div class="container">
         <h2 class="title">Trending</h2>
         <div class="swiper">
-          <div class="swiper-wrapper"></div>
+          <div class="swiper-wrapper">
+          </div>
           <div class="swiper-scrollbar"></div>
         </div>
       </div>
@@ -87,6 +89,7 @@
               <h2 class="title">Movies</h2>
               <div class="popular-movies">
                 <!-- Отображение популярных фильмов -->
+                
               </div>
             </div>
           </div>
@@ -101,6 +104,9 @@
           </div>
         </div>
     </section>
+    <dialog class="pop-up" id="modal">
+      <h2>Модалка</h2>
+    </dialog>
   </main>
 
   <footer class="footer">
@@ -114,7 +120,7 @@
 
   
   <script type="module" src="src/js/index.js" ></script>
-
+  
 </body>
 
 </html>
