Подключит функцию отрисовки детальной информации

--- a/movie-details.html
+++ b/movie-details.html
@@ -24,6 +24,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/details-card.css" />
   </head>
 
   <body>
@@ -43,6 +44,7 @@
           <a class="info-link" href="index.html">Back To Movies</a>
           <div id="movie-details">
             <!-- Вывод информации о фильме -->
+            
           </div>
         </div>
       </section>
@@ -57,7 +59,7 @@
     <!-- Компонент спиннер (лоадер)  -->
     <div class="spinner"></div>
 
-    
     <script type="module" src="src/js/index.js"></script>
+    <script type="module" src="src/js/utils/generateInfo.js"></script>
   </body>
 </html>
