--- a/tv-details.html
+++ b/tv-details.html
@@ -58,5 +58,6 @@
     <div class="spinner"></div>
 
     <script type="module" src="src/js/index.js"></script>
+    <script type="module" src="src/js/utils/generateInfo.js"></script>
   </body>
 </html>
