--- a/search.html
+++ b/search.html
@@ -89,6 +89,9 @@
           </div>
         </div>
       </section>
+      <dialog class="pop-up" id="modal">
+        <h2>Модалка</h2>
+      </dialog>
     </main>
 
     <footer class="footer">
